--- a/greybox/index.html
+++ b/greybox/index.html
@@ -110,7 +110,7 @@
         #projects .row .col-sm-4 article{max-height: 230px;overflow: hidden}
       }
       @media (max-width: 767px){
-				/*ADJUSTING TILE EXCEPRT 1.4*/
+				/*ADJUSTING TILE Excerpt 1.4*/
 				.tile-graphic.tile-large .tile-excerpt[class*="palette-"]{
 					color: white;
 					position: absolute;
@@ -702,7 +702,7 @@
 							<br><br><br><br>
 	            <h5 class="palette-teal" style="text-transform:uppercase;">Featured</h5>
 							<h4><a href="#">Deciding for the User</a></h4>
-	            <p>Content Exceprt from full-length post. Kept at around 140 char and has a link to the full article at the end. This is an excerpt. <a href="#">Read&nbsp;More</a></p>
+	            <p>Content Excerpt from full-length post. Kept at around 140 char and has a link to the full article at the end. This is an excerpt. <a href="#">Read&nbsp;More</a></p>
 	          </div>
 					</div>
         </div><!-- /featured -->
