--- a/greybox/index.html
+++ b/greybox/index.html
@@ -1052,9 +1052,8 @@
 						<div class="col-md-12 col-sm-6">
 							<img style="margin-bottom:10px;" src="img/tilex2x.png"/><br/>
 						</div>
-						<br/>
 						<div class="col-md-12 col-sm-6">
-							<img src="img/tilex2x.png"/>
+							<img style="margin-bottom:10px;" src="img/tilex2x.png"/>
 						</div>
 
 					</div>
