--- a/greybox/index.html
+++ b/greybox/index.html
@@ -61,6 +61,10 @@
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="css/breadcrumb.css">
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,900italic,900,800italic,800,700italic,700,600italic,600,500italic,500,400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,800italic,800,700italic,700,600italic,600,400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,900italic,900,700italic,700,400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
 		<!-- PRE stylesheet -->
 		<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/google/code-prettify/master/styles/defualt.css"> -->
 
@@ -70,7 +74,7 @@
     <script type='text/javascript' src='http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3'></script>
 		<script type='text/javascript' src='http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1'></script>
 
-		<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autoload=true&amp;skin=default" defer="defer"></script>
+		<!-- <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autoload=true&amp;skin=default" defer="defer"></script> -->
 
     <style type="text/css">
 		/*a{
@@ -307,7 +311,7 @@
       #color-palette p.fifty{height: 50px;margin: 0}
       .module-title p{color: #62645c; text-shadow: none;}
 
-			
+
 			.diag{
 				background-image: url(img/diag.png);
 				background-position: left top;
