--- a/greybox/quotes.html
+++ b/greybox/quotes.html
@@ -558,7 +558,7 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 170</div>Be Agile.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 171</div>Think Different.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 172</div>Never make it "POP"</li>
-												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 173</div>Be <strong style="color:#545454">BOLD</strong>.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 173</div>Be <strong style="color:#545454">BOLD</strong></li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 174</div>Be <strong style="color:#545454">LOUD</strong>.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 175</div><span style="font-family:serif;">Don't forget, Serifs can be pretty too.</span></li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 176</div>Oxford Comma or GTFO.</li>
