--- a/greybox/quotes.html
+++ b/greybox/quotes.html
@@ -591,13 +591,15 @@
 								<h2 class="tile-title">Project Name</h2>
 								<img src="img/tilex2x.png" class="" alt="" />
               </a>
-					</div><!-- /tile -->
+						</article>
+					</div><!-- /col -->
           <div class="col-sm-4 col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
                 <h2 class="tile-title">Project Name</h2>
                 <img src="img/tilex2x.png" class="" alt="" />
               </a>
+						</article>
           </div><!-- /tile -->
           <div class="col-sm-4 col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
@@ -605,6 +607,7 @@
                 <h2 class="tile-title">Project Name</h2>
                 <img src="img/tilex2x.png" class="" alt="" />
               </a>
+						</article>
           </div><!-- /tile -->
 
 				</div><!-- /row -->
@@ -615,6 +618,7 @@
                 <h2 class="tile-title">Project Name</h2>
                 <img src="img/tilex2x.png" class="" alt="" />
               </a>
+						</article>
           </div><!-- /tile -->
 
           <div class="col-sm-4">
@@ -625,6 +629,7 @@
                 <h2 class="tile-title">Project Name</h2>
                 <img src="img/tilex2x.png" class="" alt="" />
               </a>
+						</article>
           </div><!-- /tile -->
 
           <div class="col-xs-12">
@@ -633,6 +638,7 @@
                 <h2 class="tile-title">Project Name</h2>
                 <img src="img/tilex2x.png" class="" alt="" />
               </a>
+						</article>
           </div><!-- /tile -->
         </div>
         </div><!-- /col-md-4 -->
@@ -705,6 +711,52 @@
 					</article>
 				</div>
 			</div>
+
+			<div class="row">
+
+				<div class="col-sm-4 col-xs-12">
+					<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
+						<a href="#">
+							<h2 class="tile-title">Project Name</h2>
+							<img src="img/tilex2x.png" class="" alt="" />
+						</a>
+					</article>
+				</div><!-- /col -->
+				<div class="col-sm-4 col-xs-12">
+					<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
+						<a href="#">
+							<h2 class="tile-title">Project Name</h2>
+							<img src="img/tilex2x.png" class="" alt="" />
+						</a>
+					</article>
+				</div><!-- /tile -->
+				<div class="col-sm-4 col-xs-12">
+					<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
+						<a href="#">
+							<h2 class="tile-title">Project Name</h2>
+							<img src="img/tilex2x.png" class="" alt="" />
+						</a>
+					</article>
+				</div><!-- /tile -->
+
+			</div><!-- row -->
+
+			<div class="row">
+        <div class="col-sm-12">
+          <article class="tile tile-hybrid tile-large palette-white">
+						<a href="/studios/people" style="min-height: 882px;">
+							<p>
+								<img src="img/tilex2x.png"></span>
+							</p>
+							<p class="tile-category">Category</p>
+							<div class="tile-excerpt">
+								<h2 class="tile-title">A Passionate Team</h2>
+								<p>Our global team represents the best and most talented leaders in their crafts. Our clients can expect passionate, inspired teams to collaborate with them to create brilliant solutions.</p>
+							</div>
+						</a>
+					</article>
+        </div>
+      </div>
 
 		</div><!-- container -->
 
