flat alt styling

--- a/greybox/flat.html
+++ b/greybox/flat.html
@@ -302,7 +302,7 @@
 
     </style>
   </head>
-	<body class="home page page-id-1281 page-template page-template-template_home page-template-template_home-php">
+	<body id="flat" class="home page page-id-1281 page-template page-template-template_home page-template-template_home-php">
     <!-- Navigation Section -->
     <div id="navbar" class="navbar navbar-fixed-top" role="banner">
 			<div class="container">
