logo dir change

--- a/greybox/quotes.html
+++ b/greybox/quotes.html
@@ -844,7 +844,7 @@
 				<span id="back-top"><a href="#top"><i class="material-icons">keyboard_arrow_up</i></a></span>
 				<div class="row">
 					<a class="footer-brand col-xs-6 col-sm-2" href="#" itemprop="name"><!-- JOEL<strong>DOMBEK</strong> -->
-					<img src="/img/logo.png" style="width: auto;max-height:75px;padding: 0 25px;"></a>
+					<img src="img/logo.png" style="width: auto;max-height:75px;padding: 0 25px;"></a>
           <!-- <div class="col-xs-6 col-sm-2">
           	<a href="http://www.joeldombek.com/contact/"><strong itemprop="name">Contact</strong></a><br>
             <ul class="list-unstyled">
