--- a/greybox/quotes.html
+++ b/greybox/quotes.html
@@ -118,7 +118,6 @@
 					position: absolute;
 					bottom: 10px;
 				}
-        #projects .row .col-sm-4 article{max-height: 142px;overflow: hidden}
 				.carousel-control{display: none;}
       }
       @media (max-width: 767px){
@@ -178,14 +177,6 @@
       /*DISPLAYS LIGHTER THAN NON_ITALIC*/
       /*cite{font-style: italic;}*/
 			.material-icons {font-size: inherit !important;vertical-align: bottom;}
-			.footer [class^="material-icons"]{
-				float: left;
-				margin-left: -24px;
-				position: relative;
-				text-align: center;
-				top: .25em;
-				width: 24px;
-			}
 			@media (min-width: 768px){
 				.module-article > .well, .module-article .panel, .module-article .embed-responsive {margin-right: 42.666667%;padding-right: 8px}
 				.module-article > .newsletter-signup{margin-right: 42.666667%;}
@@ -862,21 +853,21 @@
           <div class="col-xs-12 col-sm-3 col-sm-offset-2">
 						<div class="row">
 
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-xs-12">
 								<!-- <a href="http://www.joeldombek.com/contact/"><strong itemprop="name">Contact</strong></a><br> -->
 								<ul class="list-unstyled">
 									<!-- <li><a href="#" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li> -->
-									<li><a href="#" target="_blank"><i class="material-icons">&#xE0E1;</i> General</a></li>
-									<li><a href="#" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
-									<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-									<li><a href="http://www.joeldombek.com/contact/"><i class="fa fa-file-pdf-o"></i> Resume</a></li>
+									<li><a href="#" target="_blank"><i class="material-icons">&#xE0E1;</i><span class="hidden-xs"> General</span></a></li>
+									<li><a href="#" target="_blank"><i class="fa fa-twitter"></i><span class="hidden-xs"> Twitter</span></a></li>
+									<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i><span class="hidden-xs"> LinkedIn</span></a></li>
+									<li><a href="http://www.joeldombek.com/contact/"><i class="fa fa-file-pdf-o"></i><span class="hidden-xs"> Resume</span></a></li>
 								</ul>
 							</div>
 
-							<div class="col-sm-6">
+							<div class="col-sm-6 col-xs-12">
 								<p class="text-right">
-									JOEL<strong>DOMBEK</strong><br/>
-									<small>V4.12.08.11.47<br/>&copy; 2016</small></p>
+									JOEL<strong>DOMBEK</strong><br class="hidden-xs"/>
+									<small>V4.12.08.11.47<br class="hidden-xs"/> &copy; 2016</small></p>
 									<br/><br/><br/>
 							</div>
 
