footer clean up

--- a/greybox/quotes.html
+++ b/greybox/quotes.html
@@ -714,8 +714,8 @@
 							<p>
 								<img src="img/tilex2x.png" class="" alt="" />
 							</p>
-							<p class="tile-category">Category</p>
 							<div class="tile-excerpt">
+								<h5 class="palette-teal" style="text-transform:uppercase;">Featured</h5>
 								<h2 class="tile-title">Client Project</h2>
 								<p>XVXVXV has worked with XVXVXV on a multi-phase, multi-year engagement to re-envision their end-to-end customer journey, informing the out-of-box and packaging experience, in-store and service experience, and the design of smartphone interfaces and ecosystems. Improving their...</p>
 							</div>
@@ -760,8 +760,8 @@
 							<p>
 								<img src="img/tilex2x.png"></span>
 							</p>
-							<p class="tile-category">Category</p>
 							<div class="tile-excerpt">
+								<h5 class="palette-teal" style="text-transform:uppercase;">Category</h5>
 								<h2 class="tile-title">A Passionate Team</h2>
 								<p>Our global team represents the best and most talented leaders in their crafts. Our clients can expect passionate, inspired teams to collaborate with them to create brilliant solutions.</p>
 							</div>
@@ -847,8 +847,19 @@
             <p><small>&copy; Joel Dombek 2016 V4.12.08.11.47</small></p>
           </div> -->
 					<div class="col-xs-12 col-sm-5">
-						This is the Graphic / Web design portfolio &amp; blog of Joel Dombek who has 9+ years experience in: logo design, identity design, graphic design, advertising, marketing, web design, and UX design. Read the rest of my <a href="#">Resume</a> here.<br/><br/>
-						<a href="#">Home</a>&nbsp;| <a href="#">All Work</a>&nbsp;| <a href="#">Blog</a>&nbsp;| <a href="#">Ideas</a>&nbsp;| <a href="#">Quotes</a>&nbsp;| <a href="#">About</a>&nbsp;| <a href="#">Resume</a> | <a href="#">Contact</a>&nbsp;| <a href="#">Search</a>
+						This is the Graphic / Web design portfolio &amp; blog of Joel Dombek who has 9+ years experience in: logo design, identity design, graphic design, advertising, marketing, web design, and UX design. Read the rest of my <a href="#">Resume</a> here.
+
+						<ul class="list-unstyled hidden-sm hidden-md hidden-lg">
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Work</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Ideas</a></li>
+							<li><a href="#">Quotes</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Resume</a></li>
+							<li><a href="#">Contact</a></li>
+							<li><a href="#">Search</a></li>
+						</ul>
 					</div>
           <div class="col-xs-12 col-sm-3 col-sm-offset-2">
 						<div class="row">
