--- a/greybox/index.html
+++ b/greybox/index.html
@@ -23,6 +23,7 @@
 			https://design.google.com/icons/										**********
 			https://github.com/google/code-prettify							********
 			material design: https://getmdl.io/components/
+			great design portfolio: http://diegoaguilar.com/		**********
 
 			NOTES:
 			use SVG icons for hero sections with graphics
