--- a/greybox/single.html
+++ b/greybox/single.html
@@ -390,8 +390,8 @@
 
 		<!-- RELATED SECTION START -->
 		<aside class="container">
-			<div class="module module-related row">
-				<header class="module-header col-sm-12"><h2 class="module-title h4">Related</h2></header>
+			<div class="module row">
+				<header class="module-header module-related col-sm-12"><h2 class="module-title h4">Related</h2></header>
 				<div class="col-sm-4">
 					<article class="tile tile-text">
 						<header class="tile-header">
