--- a/greybox/single.html
+++ b/greybox/single.html
@@ -128,6 +128,54 @@
       }
       button{background: transparent;border:none;color: white;}
 
+      /*##########################
+          TYPOGRAPHY CHANGES
+      ###########################*/
+			#featured{position: relative;}
+			#featured .featured-info{position: absolute; bottom:0;right:0;}
+			@media (max-width: 767px){
+				#featured .featured-info{position: relative;}
+      }
+			#featured h1,#featured h2,#featured h3,#featured h4,#featured h5,#featured h6{margin:.5em 0;}
+			#featured h1 a, #feaured h2 a, #featured h3 a, #featured h4 a, #featured h5 a{color: #3F3F3F;border: none;}
+			#featured p{letter-spacing: .005em;font-size: .95em;margin-bottom: 12px;line-height: 1.75em;}
+			.intro, .callout{font-weight: 600 !important;letter-spacing: 0;line-height: 1.25em;}
+      h4, .h4{font-size: 1.15em !important;}
+      blockquote::before {content:"“" !important;}
+      blockquote::after {content:"”" !important;}
+			figcaption{color: #545454;}
+			@media (min-width: 768px){
+				.module-article > hr.dashed{
+					display: block;
+					width: 30%;
+					border-bottom: 1px solid #545454;
+					border-top:none;
+					margin-right: 57.66666666666667%;
+					margin-top: 2.5em;
+					margin-bottom: 2.5em;
+				}
+			}
+			@media (min-width: 768px){
+				.module-article pre.prettyprint{
+					margin-right: 41.66666666666667%;
+					margin-top: 0;
+					padding: 10px;
+					border: 1px solid #CCC;
+					max-height: 400px;
+					white-space: pre-wrap;
+					white-space: -moz-pre-wrap !important;
+					white-space: -pre-wrap;
+					white-space: -o-pre-wrap;
+					word-wrap: break-word;
+					overflow-x: auto;
+				}
+			}
+			/* !!! ADJUST HR !!! */
+			hr.dashed{display: block; width: 100%; border-bottom: 2px dashed #545454;}
+			mark{background-color: #FFFF9E; color: #545454;}
+      /*DISPLAYS LIGHTER THAN NON_ITALIC*/
+      /*cite{font-style: italic;}*/
+			.material-icons {font-size: inherit !important;vertical-align: bottom;}
 			@media (min-width: 768px){
 				.module-article > .well, .module-article .panel, .module-article .embed-responsive {margin-right: 42.666667%;padding-right: 8px}
 				.module-article > .newsletter-signup{margin-right: 42.666667%;}
