INDEX AND PAGE JAVASCRIPTS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <a href="https://github.com/joeldom/redesign/zipball/master" class="btn">Download .zip</a>
 			<!-- <a href="https://github.com/joeldom/redesign/tarball/master" class="btn">Download .tar.gz</a> -->
       <a href="http://joeldom.github.io/redesign/greybox/" class="btn">Greybox</a>
-      <a href="http://joeldom.github.io/redesign/angular" class="btn">AngularJS</a>
+      <!-- <a href="http://joeldom.github.io/redesign/angular" class="btn">AngularJS</a> -->
+      <a href="http://joeldom.github.io/redesign/timeline" class="btn">Timeline</a>
     </section>
 
     <!-- <section class="main-content">
