--- a/greybox/single.html
+++ b/greybox/single.html
@@ -356,8 +356,8 @@
 					<div class="promo">
 						<button href="#collapse2" class="quote-toggle"><i class="material-icons">clear</i></button>
 						<div id="collapse2" class="palette-grey80 palette-inverse">
-							<p>Like what you see? Lets work together!</p>
-							<div class="text-center"><a class="read-more center-block" href="#">Contact</a></div>
+							<p class="text-center">Like what you see? Lets work together!</p>
+							<div class="text-center"><a class="read-more center-block" href="#">Contact&nbsp;Me</a></div>
 						</div>
 					</div>
 				</div><!--/col-->
@@ -624,26 +624,61 @@
 		</div><!-- overlay-search -->
 
     <!-- Scripts -->
+		<!-- <script>
+    	(function($, inActiveTab, undefined) {
 
+			$(function () {
+			  var message = "Hey! Come back!";
+			  var original;
 
+			  $(window).focus(function() {
+			    if(original) {
+			      document.title = original;
+			    }
+			  }).blur(function() {
+			    var title = $('title').text();
+			    if(title != message) {
+			      original = title;
+			    }
+			    document.title = message;
+			  });
+			});
 
-<script type="text/javascript">
-function EasyPeasyParallax() {
-	scrollPos = $(this).scrollTop();
-	$('#banner').css({
-		'background-position' : '50% ' + (-scrollPos/4)+"px"
+      }(window.jQuery, window.inActiveTab));
+    </script> -->
+
+		<script type="text/javascript">
+			var space = " ";
+			var speed = "50";
+			var pos = 0;
+			var msg = "Welcome to my site I hope you enjoy it as much as I enjoyed making it,";
+			function Scroll()
+				{
+					document.title = msg.substring(pos, msg.length) + space + msg.substring(0,pos);
+					pos++;
+					if (pos > msg.length) pos = 0;
+					window.setTimeout("Scroll()", speed);
+				}
+				Scroll();
+		</script>
+
+	<script type="text/javascript">
+	function EasyPeasyParallax() {
+		scrollPos = $(this).scrollTop();
+		$('#banner').css({
+			'background-position' : '50% ' + (-scrollPos/4)+"px"
+		});
+		$('#bannertext').css({
+			'margin-top': (scrollPos/4)+"px",
+			'opacity': 1-(scrollPos/250)
+		});
+	}
+	$(document).ready(function(){
+		$(window).scroll(function() {
+			EasyPeasyParallax();
+		});
 	});
-	$('#bannertext').css({
-		'margin-top': (scrollPos/4)+"px",
-		'opacity': 1-(scrollPos/250)
-	});
-}
-$(document).ready(function(){
-	$(window).scroll(function() {
-		EasyPeasyParallax();
-	});
-});
-</script>
+	</script>
 		<style type="text/css" id="cssID">.main{border-color:white !important; border:none !important;}#container > div.main{border:none !important;}
 		.theme-white .extra, .theme-white .main{border-color:white !important;}
 		iframe *, iframe * *, iframe * * *, iframe * * * *, iframe * * * * *, iframe * * * * * *{border-color:white !important;border:none !important;}</style>
