fixed home codekit
fixed repo
fixed codekit
added material button
wave effect

--- a/greybox/single.html
+++ b/greybox/single.html
@@ -337,6 +337,7 @@
           <p>Experience design is based on using the concept behind the brand as a way to identify and define value for customers. And this becomes the purpose and intent of the business—to deliver products, services, and experiences that deliver the value that the brand represents, and reinforces the unique brand meaning. But it also means measuring that value from the customer’s perspective, and continually investigating new areas of value that are natural extensions for the brand.</p>
           <p>Experience design provides a way for the business and the designer to both discuss objectives and options. It creates a way for business to invite design to the table earlier, and understand how design can help solve problems. And it also helps businesses rethink how they engage design partners in ways that are more likely to produce success with less risk.</p>
           <p>In a robust and thought-provoking analysis, Newbery and Farnham provide business leaders with insight into ways to integrate brand purpose into products and service value and across the entire journey a customer has with a business. The goal is to build a strategic approach for helps business engage their customers through experiences that deliver value and strengthen the relationship between business and customer.</p>
+					<a class="btn-floating palette-navy palette-inverse"><i class="material-icons">add</i></a>
         </div><!--/col-->
 
 				<div class="col-sm-4 sidebar overlap-sm">
@@ -624,7 +625,7 @@
 		</div><!-- overlay-search -->
 
     <!-- Scripts -->
-		<!-- <script>
+		<script>
     	(function($, inActiveTab, undefined) {
 
 			$(function () {
@@ -645,22 +646,7 @@
 			});
 
       }(window.jQuery, window.inActiveTab));
-    </script> -->
-
-		<script type="text/javascript">
-			var space = " ";
-			var speed = "50";
-			var pos = 0;
-			var msg = "Welcome to my site I hope you enjoy it as much as I enjoyed making it,";
-			function Scroll()
-				{
-					document.title = msg.substring(pos, msg.length) + space + msg.substring(0,pos);
-					pos++;
-					if (pos > msg.length) pos = 0;
-					window.setTimeout("Scroll()", speed);
-				}
-				Scroll();
-		</script>
+    </script>
 
 	<script type="text/javascript">
 	function EasyPeasyParallax() {
@@ -712,6 +698,7 @@
 		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"</script> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<!-- <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script> -->
+
 		<script>
 		//RESPONDIFY SCRIPT
 		function respondify(){
