--- a/greybox/pages/main-blog.html
+++ b/greybox/pages/main-blog.html
@@ -62,8 +62,8 @@
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="../css/breadcrumb.css">
-		<!-- <link rel="stylesheet" href="../css/halcyon.css"> -->
-		<!-- <link rel="stylesheet" href="../css/flexslider.css"> -->
+		<!-- <link rel="stylesheet" href="../css/halcyon-styles.css">
+		<link rel="stylesheet" href="../css/halcyon-flexslider.css"> -->
 		<!-- PRE stylesheet -->
 		<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/google/code-prettify/master/styles/defualt.css"> -->
 
@@ -711,9 +711,8 @@
 		<script src="../js/svginline.js"></script>
 		<script src="../js/overlaysearch.js"></script>
 		<script src="../js/jquery.flexslider.js"></script>
-		<script src="../js/halcyon.js"></script>
-		<script src="../js/waypoints.min.js"></script>
-		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"</script> -->
+		<script src="../js/halcyon-scripts.js"></script>
+		<script src="../js/halcyon-waypoints.min.js"></script>
 		<script src="../js/tab.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
