--- a/greybox/src/halcyon/index.html
+++ b/greybox/src/halcyon/index.html
@@ -8,10 +8,10 @@
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/flexslider.css" rel="stylesheet" >
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/queries.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/halcyon-flexslider.css" rel="stylesheet" >
+    <link href="css/halcyon-styles.css" rel="stylesheet">
+    <link href="css/halcyon-queries.css" rel="stylesheet">
+    <link href="css/halcyon-animate.css" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -108,7 +108,7 @@
         </section>
         <section class="text-center" id="responsive">
           <div class="container-fluid nopadding responsive-services">
-            <div class="wrapper">
+            <div class="halcyon">
               <div class="iphone">
                 <div class="wp3"></div>
               </div>
@@ -275,7 +275,7 @@
                           </ul>
                         </div>
                       </div>
-                      
+
                       <div class="col-md-4 wp5 delay-05s">
                         <img src="img/team-02.png" alt="Team Member">
                         <h2>Cersei Lannister</h2>
@@ -411,9 +411,9 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/waypoints.min.js"></script>
+        <script src="js/halcyon-waypoints.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="js/halcyon-scripts.js"></script>
         <script src="js/jquery.flexslider.js"></script>
         <script src="js/modernizr.js"></script>
       </body>
