--- a/greybox/pages/main-blog.html
+++ b/greybox/pages/main-blog.html
@@ -136,12 +136,13 @@
 					<div class="container">
 						<h1 class="module-title">BLOG</h1>
 						<div class="row">
-							<div class="col-md-10 col-xs-8">
+							<div class="col-sm-12">
 								<ul class="nav nav-tabs" role="tablist">
 									<li role="blog" class="active"><a href="#main" aria-controls="main" role="tab" data-toggle="tab">Main</a></li>
 									<li role="blog"><a href="#design" aria-controls="design" role="tab" data-toggle="tab">Design</a></li>
 									<li role="blog"><a href="#code" aria-controls="code" role="tab" data-toggle="tab">Code</a></li>
 									<li role="blog"><a href="#science" aria-controls="science" role="tab" data-toggle="tab">Science</a></li>
+									<li><a id="search" href="#"><i class="material-icons">search</i>&nbsp;Search</a></li>
 								</ul>
 
 								<!-- Tab panes -->
@@ -171,9 +172,6 @@
 									</div>
 								</div>
 								<!-- Tab panes -->
-							</div>
-							<div class="col-md-2 col-xs-4">
-								<a id="search" href="#"><i class="material-icons">search</i>&nbsp;Search</a>
 							</div>
 						</div><!-- /row -->
 					</div><!-- /container -->
