--- a/greybox/pages/quotes.html
+++ b/greybox/pages/quotes.html
@@ -576,6 +576,7 @@
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 207</div>Use a framework.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 208</div>Version.</li>
 												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 209</div>Do it today.</li>
+												<li class="quote"><div class="num">Design Quotes N<sup>o</sup> 210</div>Nothing to see here. Move along.</li>
 											</ul>
 						        </div>
 						      </div>
