--- a/greybox/pages/full.html
+++ b/greybox/pages/full.html
@@ -374,13 +374,13 @@
 			</div>
 		</div>
 
-    <!-- Greybox Elements -->
+		<!-- Greybox Elements -->
     <div class="container">
 
       <div class="row">
         <div id="featured">
 					<div class="row">
-						<div class="col-sm-8 featured-image"><img src="../img/tabbedx2x.png"/></div>
+						<div class="col-sm-8 featured-image"><img src="../img/tabbedx2x.png"></div>
 	          <div class="col-sm-4 featured-info">
 							<br><br><br><br>
 	            <h5 class="palette-teal" style="text-transform:uppercase;">Featured</h5>
@@ -391,7 +391,7 @@
         </div><!-- /featured -->
       </div><!-- /row -->
 
-      <br/>
+      <br>
 
       <div id="projects">
 				<div class="row">
@@ -403,30 +403,48 @@
 								<div class="tile-card">
 									<div class="inside">
 										<div>
-											<span>201X</span>
+											<span class="year">201X</span>
 											<h2>Project Name</h2>
-											<span>Category 01 / Category 02 / Category 03 / Category 04</span><br>
-											<span>+ SEE MORE +</span>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
 										</div>
 									</div>
 								</div>
-								<img src="../img/tilex2x.png" class="" alt="" />
+								<img src="../img/tilex2x.png" class="" alt="">
               </a>
 						</article>
 					</div><!-- /col -->
           <div class="col-sm-4 col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
-                <h2 class="tile-title">Project Name</h2>
-                <img src="../img/tilex2x.png" class="" alt="" />
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+                <img src="../img/tilex2x.png" class="" alt="">
               </a>
 						</article>
           </div><!-- /tile -->
           <div class="col-sm-4 col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
-                <h2 class="tile-title">Project Name</h2>
-                <img src="../img/tilex2x.png" class="" alt="" />
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+                <img src="../img/tilex2x.png" class="" alt="">
               </a>
 						</article>
           </div><!-- /tile -->
@@ -442,14 +460,14 @@
 								<div class="tile-card">
 									<div class="inside">
 										<div>
-											<span>201X</span>
+											<span class="year">201X</span>
 											<h2>Project Name</h2>
-											<span>Category 01 / Category 02 / Category 03 / Category 04</span><br>
-											<span>+ SEE MORE +</span>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
 										</div>
 									</div>
 								</div>
-								<img src="../img/tilex2x.png" height="500px" class="" alt="" />
+								<img src="../img/tilex2x.png" height="500px" class="" alt="">
 							</a>
 						</article>
 					</div><!-- /col -->
@@ -460,14 +478,14 @@
 								<div class="tile-card">
 									<div class="inside">
 										<div>
-											<span>201X</span>
+											<span class="year">201X</span>
 											<h2>Project Name</h2>
-											<span>Category 01 / Category 02 / Category 03 / Category 04</span><br>
-											<span>+ SEE MORE +</span>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
 										</div>
 									</div>
 								</div>
-								<img src="../img/tilex2x.png" height="500px" class="" alt="" />
+								<img src="../img/tilex2x.png" height="500px" class="" alt="">
 							</a>
 						</article>
 					</div><!-- /tile -->
@@ -481,14 +499,14 @@
 								<div class="tile-card">
 									<div class="inside">
 										<div>
-											<span>201X</span>
+											<span class="year">201X</span>
 											<h2>Project Name</h2>
-											<span>Category 01 / Category 02 / Category 03 / Category 04</span><br>
-											<span>+ SEE MORE +</span>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
 										</div>
 									</div>
 								</div>
-                <img src="../img/tilex2x.png" class="" alt="" />
+                <img src="../img/tilex2x.png" class="" alt="">
               </a>
 						</article>
           </div><!-- /tile -->
@@ -498,8 +516,17 @@
           <div class="col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
-                <h2 class="tile-title">Project Name</h2>
-                <img src="../img/tilex2x.png" class="" alt="" />
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+                <img src="../img/tilex2x.png" class="" alt="">
               </a>
 						</article>
           </div><!-- /tile -->
@@ -507,8 +534,17 @@
           <div class="col-xs-12">
             <article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
               <a href="#">
-                <h2 class="tile-title">Project Name</h2>
-                <img src="../img/tilex2x.png" class="" alt="" />
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+                <img src="../img/tilex2x.png" class="" alt="">
               </a>
 						</article>
           </div><!-- /tile -->
@@ -517,117 +553,159 @@
 
         </div><!-- /row -->
 
+				<div class="row">
+				  <div class="col-sm-4">
+						<article class="tile tile-graphic tile-medium palette-grey palette-inverse">
+							<a href="/work">
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+								<p class="hidden-xs">
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+								<p class="visible-xs">
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+							</a>
+						</article>
+						<article class="tile tile-graphic tile-medium palette-grey palette-inverse">
+							<a href="/work">
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+								<p class="hidden-xs">
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+								<p class="visible-xs">
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+							</a>
+						</article>
+						<article class="tile tile-graphic tile-medium palette-grey palette-inverse">
+							<a href="/work">
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+								<p class="hidden-xs">
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+								<p class="visible-xs">
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+							</a>
+						</article>
+					</div>
+					<div class="col-sm-8">
+						<article class="tile tile-hybrid tile-medium palette-white">
+							<a href="/work" style="min-height: 990px;">
+								<p>
+									<img src="../img/tilex2x.png" class="" alt="">
+								</p>
+								<div class="tile-excerpt">
+									<h5 class="palette-teal" style="text-transform:uppercase;">Featured</h5>
+									<h2 class="tile-title">Client Project</h2>
+									<p>XVXVXV has worked with XVXVXV on a multi-phase, multi-year engagement to re-envision their end-to-end customer journey, informing the out-of-box and packaging experience, in-store and service experience, and the design of smartphone interfaces and ecosystems. Improving their...</p>
+								</div>
+							</a>
+						</article>
+					</div>
+				</div>
+
+				<div class="row">
+
+					<div class="col-sm-4 col-xs-12">
+						<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
+							<a href="#">
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span><br>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+								<img src="../img/tilex2x.png" class="" alt="">
+							</a>
+						</article>
+					</div><!-- /col -->
+					<div class="col-sm-4 col-xs-12">
+						<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
+							<a href="#">
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span><br>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+								<img src="../img/tilex2x.png" class="" alt="">
+							</a>
+						</article>
+					</div><!-- /tile -->
+					<div class="col-sm-4 col-xs-12">
+						<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
+							<a href="#">
+								<div class="tile-card">
+									<div class="inside">
+										<div>
+											<span class="year">201X</span>
+											<h2>Project Name</h2>
+											<span class="category">Category 01 / Category 02 / Category 03 / Category 04</span><br>
+											<span class="see-more">View</span>
+										</div>
+									</div>
+								</div>
+								<img src="../img/tilex2x.png" class="" alt="">
+							</a>
+						</article>
+					</div><!--/tile -->
+				</div><!--/row -->
+
+				<div class="row">
+	        <div class="col-sm-12">
+	          <article class="tile tile-hybrid tile-large palette-white">
+							<a href="/studios/people" style="min-height: 988px;">
+								<p>
+									<img src="../img/tilex2x.png">
+								</p>
+								<div class="tile-excerpt">
+									<h5 class="palette-teal" style="text-transform:uppercase;">Category</h5>
+									<h2 class="tile-title">A Passionate Team</h2>
+									<p>Our global team represents the best and most talented leaders in their crafts. Our clients can expect passionate, inspired teams to collaborate with them to create brilliant solutions.</p>
+								</div>
+							</a>
+						</article>
+	        </div><!--/tile-->
+	      </div><!--/row -->
+
 			</div><!-- /projects -->
 		</div><!-- /container -->
-
-		<div class="container">
-
-			<div class="row">
-			  <div class="col-sm-4">
-					<article class="tile tile-graphic tile-medium palette-grey palette-inverse">
-						<a href="/work">
-					    <h2 class="tile-title">Project Name</h2>
-							<p class="hidden-xs">
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-							<p class="visible-xs">
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-						</a>
-					</article>
-					<article class="tile tile-graphic tile-medium palette-grey palette-inverse">
-						<a href="/work">
-					    <h2 class="tile-title">Project Name</h2>
-							<p class="hidden-xs">
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-							<p class="visible-xs">
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-						</a>
-					</article>
-					<article class="tile tile-graphic tile-medium palette-grey palette-inverse">
-						<a href="/work">
-					    <h2 class="tile-title">Project Name</h2>
-							<p class="hidden-xs">
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-							<p class="visible-xs">
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-						</a>
-					</article>
-				</div>
-				<div class="col-sm-8">
-					<article class="tile tile-hybrid tile-medium palette-white">
-						<a href="/work">
-							<p>
-								<img src="../img/tilex2x.png" class="" alt="" />
-							</p>
-							<div class="tile-excerpt">
-								<h5 class="palette-teal" style="text-transform:uppercase;">Featured</h5>
-								<h2 class="tile-title">Client Project</h2>
-								<p>XVXVXV has worked with XVXVXV on a multi-phase, multi-year engagement to re-envision their end-to-end customer journey, informing the out-of-box and packaging experience, in-store and service experience, and the design of smartphone interfaces and ecosystems. Improving their...</p>
-							</div>
-						</a>
-					</article>
-				</div>
-			</div>
-
-			<div class="row">
-
-				<div class="col-sm-4 col-xs-12">
-					<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
-						<a href="#">
-							<h2 class="tile-title">Project Name</h2>
-							<img src="../img/tilex2x.png" class="" alt="" />
-						</a>
-					</article>
-				</div><!-- /col -->
-				<div class="col-sm-4 col-xs-12">
-					<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
-						<a href="#">
-							<h2 class="tile-title">Project Name</h2>
-							<img src="../img/tilex2x.png" class="" alt="" />
-						</a>
-					</article>
-				</div><!-- /tile -->
-				<div class="col-sm-4 col-xs-12">
-					<article class="tile tile-graphic tile-medium palette-grey20 palette-inverse">
-						<a href="#">
-							<h2 class="tile-title">Project Name</h2>
-							<img src="../img/tilex2x.png" class="" alt="" />
-						</a>
-					</article>
-				</div><!-- /tile -->
-
-			</div><!-- row -->
-
-			<div class="row">
-        <div class="col-sm-12">
-          <article class="tile tile-hybrid tile-large palette-white">
-						<a href="/studios/people">
-							<p>
-								<img src="../img/tilex2x.png"></span>
-							</p>
-							<div class="tile-excerpt">
-								<h5 class="palette-teal" style="text-transform:uppercase;">Category</h5>
-								<h2 class="tile-title">A Passionate Team</h2>
-								<p>Our global team represents the best and most talented leaders in their crafts. Our clients can expect passionate, inspired teams to collaborate with them to create brilliant solutions.</p>
-							</div>
-						</a>
-					</article>
-        </div>
-      </div>
-
-		</div><!-- container -->
-
-
-
-
-
-
-
 
 
 		<!-- RELATED SECTION START -->
@@ -670,19 +748,19 @@
 					</article>
 				</div>
 			</div>
+
+			<span id="back-top2">
+				<a class="back-top" href="#top">
+					<span style="font-size:2em;line-height:1em; transform: scale(2, .5);"><i class="material-icons">arrow_drop_up</i></span><br>
+					Back to Top
+				</a>
+			</span>
 		</aside>
 		<!-- RELATED SECTION END -->
-		<span id="back-top2">
-			<a href="#top" style="text-decoration:none;border:0;display:block;text-align:center;text-transform:capitalize;font-weight:900;">
-				<span	style="font-size:2em;line-height:1em; transform: scale(2, .5);"><i class="material-icons">arrow_drop_up</i></span><br>
-				Back to Top
-			</a>
-		</span>
 
-		<div class="container">
 
-		</div><!-- /container -->
-</div>
+	</div><!--/wrapper-->
+
 <!-- <div class="container-fluid">
 	<div class="row twoUp">
 		<div class="col-xs-12 col-sm-6" style="background-color:grey;">.col-xs-12 .col-sm-6</div>
@@ -742,7 +820,7 @@
 		<div class="row">
 
 			<footer class="footer" itemscope="" itemtype="http://schema.org/Organization">
-				<span id="back-top"><a href="#top"><i class="material-icons">keyboard_arrow_up</i></a></span>
+				<!-- <span id="back-top"><a href="#top"><i class="material-icons">keyboard_arrow_up</i></a></span> -->
 				<div class="row">
 					<a class="footer-brand col-xs-6 col-sm-2" href="#" itemprop="name"><!-- JOEL<strong>DOMBEK</strong> -->
 					<img src="../img/logo.png" style="width: auto;max-height:75px;padding: 0 25px;"></a>
